# ai_interview_assistant

./: .gitignore  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP.md  config_example.env  main.py  pyproject.toml  requirements.txt
_old_files/: debug_audio.py  fix_chopping_issues.py
_old_files/src/: assistant_agent.py  main.py  test_setup.py
ai_interview_assistant/: __init__.py
ai_interview_assistant/config/: __init__.py  settings.py
ai_interview_assistant/core/: __init__.py  interview_assistant.py
ai_interview_assistant/core/audio/: __init__.py  audio_processor.py  voice_activity_detector.py
ai_interview_assistant/core/speech/: __init__.py  question_analyzer.py  speech_recognizer.py
ai_interview_assistant/services/: __init__.py  ai_service.py  conversation_service.py  speech_service.py
ai_interview_assistant/utils/: __init__.py  environment.py
